--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2023 NextGenTool. All rights reserved.</p>
+            <p>&copy; 2025 NextGenTool.Make WITH ♡.All Rights Reserved.</p>
         </div>
     </footer>
 
